# weave-init

./: Cargo.toml  README.md
src/: main.rs
src/config/: cli.rs
src/core/: manifest.rs  selections.rs
src/engine/: downloader.rs  generator.rs
src/ui/: app.rs  screens.rs  theme.rs
