[package]
name = "weave-cli"
version = "0.1.0"
edition = "2021"
authors = ["WeaveITMeta"]
description = "A full-stack project scaffolding CLI with an interactive terminal UI. Choose your platform, backend language, auth provider, database, cloud infrastructure, and microservices — get a production-ready monorepo."
license = "MIT"
repository = "https://github.com/WeaveITMeta/Weave-CLI"
homepage = "https://github.com/WeaveITMeta/Weave-CLI"
readme = "README.md"
keywords = ["cli", "scaffold", "fullstack", "monorepo", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "target/"]

[[bin]]
name = "weave"
path = "src/main.rs"

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for downloading templates
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Git operations
git2 = "0.19"

# Template rendering for config files
tera = "1"

# Progress bars
indicatif = "0.17"

# File system operations
walkdir = "2"
fs_extra = "1.3"
tempfile = "3"

# Archive handling
flate2 = "1"
tar = "0.4"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Directories (cache, config paths)
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Glob pattern matching for manifest rules
glob = "0.3"

# Color support
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
